<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    tools:context=".presenter.fragment.detail.DetailFragment">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/toolbar_detail_color"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_16"
        android:paddingTop="@dimen/spacing_32"
        android:paddingBottom="@dimen/spacing_16">

        <TextView
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            tools:text="Hehehe" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceCaption"
            tools:text="Hehehe" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            tools:text="Hehehe" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_16"
        android:contentDescription="@string/content_desc_favorite_button"
        android:visibility="gone"
        app:layout_anchor="@id/detail_content"
        app:layout_anchorGravity="top|end"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_detail_color"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="?colorOnSurface" />
    </com.google.android.material.appbar.AppBarLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>